--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-container {
+  position: relative;
+  background-image:  url("images/backgroundImg.png");
+  background-color: black;
+  min-height: 660px;
+  background-position: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-left {
+  display: flex;
+  flex-direction: column;
+  -webkit-text-fill-color: transparent;
+  position: relative;
+  top: 6px;
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,171,138,1) 53%, rgba(255,72,0,1) 76%);
+  /* text-overflow: clip 4; */
+  -webkit-background-clip: text;
+}
+
+button {
+  -webkit-text-fill-color: darkgrey;
+  position: relative;
+  top: 85px;
+  width: 200px;
+  border-radius: 5px;
+  padding: 8px ;
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid rgba(25, 166, 247, 0.418);
+
+  
+}
+
+.main-right { 
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#cards {
+  position: relative;
+  color: rgb(207, 207, 207);
+  gap: 25px;
+  max-width: 358px;
+  width: calc(100% - 20px);
+  top: 76px;
+}
+.card {
+  background-color: rgba(255, 255, 255, 0.005);
+  border: 1px solid rgba(255, 255, 255, );
+  border-radius: 10px;
+  cursor: pointer;
+  height: 160px;
+  position: relative;
+  width: 160px;
+}
+
+.card:hover::before {
+  opacity: 1;
+}
+
+.card::before {
+  background: radial-gradient(
+    800px circle at var(--mouse-x) var(--mouse-y),
+    rgba(255, 255, 255, 0.06),
+    transparent 40%
+    );
+    
+  border-radius: inherit;
+  content: '';
+  height: 100%;
+  left: 0px;
+  opacity: 0;
+  transition: opacity 500ms;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  z-index: 2;
+}
+
+.card-text {
+  position: relative;
+  top: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  position: relative;
+  top: -10px;
+  font-size: 20px;
+  font-weight: 200;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 60px;
+  font-weight: 500;
+}
+
+h2 {
+  font-size: 60px;
+}
+
+h3 {
+  font-size: 15px;
+  font-weight: 200;
+}
+
+span {
+  font-size: 20px;
 }
